Java Projects/Hashing/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\Hashing
-d
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\Hashing\doc
-encoding
windows-1252
-charset
windows-1252
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\Hashing\KeyedLinkedList.java
<---- end of javadoc command ---->
Loading source file \\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\Hashing\KeyedLinkedList.java...
\\dist113\dhs_stud\DHSStudent\191sachsb\Desktop\Hashing\KeyedLinkedList.java:62: error: ';' expected
                first = first.nextk
                                   ^
1 error
